--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@radix-ui/react-radio-group": "^1.1.2",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.5",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "scheduler": "^0.23.0",
     "styled-components": "^5.3.9",
+    "use-context-selector": "^1.4.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
